# bcit-comp2510-c-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  admittedReport.txt  dischargedReport.txt  doctorUtilReport.txt  dsm.c  dsm.h  file_m.c  file_m.h  list.c  list.h  main.c  patient.c  patient.h  report.c  report.h  roomUtilReport.txt  test  test.c  test.h  testroomreport.txt  ui.c
